# fg_engine_v2_work

./: .gitignore  5a.tar  5a_particle.tar  6a.tar  Cargo.toml  butterfly_swipe.tar  idle.tar  imgui.ini  test.json  test.rs  test.tar  todo.txt  walk_backward.tar  walk_forward.tar
fg_controller/: Cargo.toml
fg_controller/sdl_controller_backend/: Cargo.toml
fg_controller/sdl_controller_backend/src/: lib.rs
fg_controller/src/: backend.rs  control_mapping.rs  control_scheme.rs  lib.rs
fg_datastructures/: Cargo.toml
fg_datastructures/src/: lib.rs  player_data.rs  roster.rs
fg_datastructures/src/math/: collision.rs  graphics.rs
fg_input/: Cargo.toml
fg_input/src/: guard.rs  input.rs  interpret.rs  lib.rs  motion.rs  notation.rs
fg_input/src/axis/: directed_axis.rs  direction.rs  facing.rs  mod.rs
fg_input/src/input/: axis.rs  button.rs  control_scheme.rs  input_coalesce.rs  input_state.rs  motion.rs  pads_context.rs  parsing.rs
fg_input/src/input/axis/: directed_axis.rs
fg_input/src/input/button/: button_set.rs  button_state.rs
fg_input/src/interpret/: axis.rs  button_set.rs  double_tap.rs  dragon_punch.rs  helper.rs  quarter_circle.rs  super_jump.rs  types.rs
fg_input/src/interpret/helper/: alt.rs
fg_input/src/notation/: button_press.rs  button_set.rs  directed_axis.rs  double_tap.rs  dragon_punch.rs  high_jump.rs  idle.rs  quarter_circle.rs
fg_netcode/: Cargo.toml
fg_netcode/src/: error.rs  game.rs  lib.rs  lobby.rs  player_info.rs  player_list.rs  query.rs  test.rs
fg_netcode/src/lobby/: lobby_state.rs
fg_netcode/std_udp_backend/: Cargo.toml
fg_netcode/std_udp_backend/src/: backend.rs  cert.rs  channel_map.rs  connection.rs  join.rs  lib.rs  lobby_state.rs  request.rs  turbulence_impl.rs  util.rs
fg_netcode/std_udp_backend/src/backend/: lobby.rs
fg_ui/: Cargo.toml
fg_ui/src/: delay.rs  lib.rs  menu.rs
resources/: animation.json
resources/yuyuko/5a/: anim.json
resources/yuyuko/5a particle/: anim.json
resources/yuyuko/butterfly_melee/: anim.json
resources/yuyuko/guard/: anim.json
resources/yuyuko/guard_glyph/: anim.json
resources/yuyuko/hit/: anim.json
resources/yuyuko/melee/: anim.json
resources/yuyuko/walk_backwards/: anim.json
resources/yuyuko/walk_forward/: anim.json
shaders/: fragment.glslf
src/: animation.rs  app_state.rs  assets.rs  attack.rs  button_check.rs  character.rs  character_state.rs  command_list.rs  editor.rs  enum_helpers.rs  game.rs  game_match.rs  graphics.rs  hitbox.rs  imgui.ini  imgui_extra.rs  imgui_wrapper.rs  input.rs  input_macros.rs  main.rs  main_menu.rs  menus.rs  player_list.rs  replay.rs  roster.rs  runner.rs  stage.rs  test.rs  timeline.rs  typedefs.rs
src/animation/: animation.rs  animation_data.rs  mod.rs  sprite.rs
src/animation/animation/: file.rs  ui.rs
src/animation/sprite/: ui.rs
src/character/: bullets.rs  command.rs  components.rs  particles.rs  properties.rs  state.rs  states.rs
src/character/bullets/: bullet_info.rs
src/character/components/: attack_data.rs  bullets.rs  particles.rs  properties.rs  states.rs
src/character/state/: animation_data.rs  bullet_spawn_data.rs  cancel_set.rs  file.rs  flags.rs  global_graphics.rs  hitbox_set.rs  particle_spawn_data.rs  sound_play_info.rs
src/character_state/: animation_data.rs  bullet_spawn_data.rs  cancel_set.rs  file.rs  flags.rs  hitbox_set.rs  particle_spawn_data.rs  ui.rs
src/editor/: animation_editor.rs  bullet_editor.rs  character_editor.rs  main_menu.rs  state_editor.rs
src/game/: animation_editor.rs  character_editor.rs  main_menu.rs  state_editor.rs
src/game_match/: flash.rs  match_settings.rs  noop_writer.rs  player.rs  sounds.rs
src/game_match/sounds/: channel.rs  path.rs  renderer.rs  sound_state.rs
src/game_object/: constructors.rs  mod.rs  properties.rs  state.rs
src/game_object/constructors/: inspect.rs  position.rs  templates.rs  timer.rs  traits.rs  tuples.rs  typedefs.rs
src/game_object/properties/: macros.rs  typedefs.rs
src/graphics/: animation.rs  animation_data.rs  animation_group.rs  graphics.rs  keyframe.rs  particle.rs  sprite.rs
src/graphics/animation/: file.rs  ui.rs  version.rs
src/graphics/animation_group/: file.rs  version.rs
src/graphics/particle/: file.rs  version.rs
src/graphics/sprite/: file.rs  ui.rs  version.rs
src/input/: axis.rs  button.rs  control_scheme.rs  input_state.rs  motion.pest  motion.rs  pads_context.rs  parsing.rs  ringbuffer.rs
src/input/axis/: directed_axis.rs  direction.rs  facing.rs
src/input/button/: button_set.rs  button_state.rs
src/menus/: button_check.rs  display_settings.rs  gameplay.rs  loading_screen.rs  main_menu.rs  networked.rs  settings_menu.rs
src/menus/gameplay/: character_select.rs  controller_select.rs  local_versus.rs  netcode_select.rs  netplay_versus.rs  retry_screen.rs  training_mode.rs  watch_replay.rs
src/menus/networked/: lobby_select.rs  lobby_view.rs
src/netcode/: input_history.rs  mod.rs
src/netcode/input_history/: local_history.rs  networked_history.rs
src/roster/: character.rs  generic_character.rs  world.rs  yuyuko.rs
src/roster/character/: clone.rs  data.rs  draw.rs  player_state.rs  smp.rs  typedefs.rs
src/roster/generic_character/: bullet.rs  combo_state.rs  extra_data.rs  hit_info.rs  impls.rs  macros.rs  move_id.rs  particle_id.rs
src/roster/yuyuko/: attacks.rs  bullets.rs  command_list.rs  commands.rs  data.rs  graphic.rs  inputs.rs  moves.rs  object.rs  particles.rs  sounds.rs  state.rs
src/ui/: character.rs  character_state.rs  editor.rs  graphics.rs  mod.rs
src/ui/character/: components.rs  state.rs
src/ui/character_state/: animation_data.rs  bullet_spawn_data.rs  cancel_set.rs  flags.rs  hitbox_set.rs  particle_spawn_data.rs  state.rs
src/ui/editor/: animation_editor.rs  animation_group_editor.rs  attack_editor.rs  bullet_editor.rs  character_editor.rs  instance_data_editor.rs  main_menu.rs  particle_editor.rs  state_editor.rs  typed_animation_editor.rs  typed_animation_group_editor.rs  typed_attack_editor.rs  typed_character_editor.rs  typed_instance_data_editor.rs  (+1 more)
(+69 files in other folders)
