[package]
name = "fg_engine"
version = "0.1.0"
authors = ["Angel of Sol <julietckilian@gmail.com>"]
edition = "2018"

[dependencies]
ggez = { git = "https://github.com/AngelOfSol/ggez" } 
nalgebra = { version = "0.19.0", features = ["serde-serialize", "mint"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
gfx_core = "0.9.2"
gfx_device_gl = "0.16.2"
imgui = "0.3.0"
imgui-gfx-renderer = "0.3.0"
imgui-sys = "0.3.0"
nfd = "0.0.4"
image = "0.23.0"
gfx = "0.18.2"
strum = "0.18.0"
strum_macros = "0.18.0"
maplit = "1.0.2"
laminar = "0.3.2"
bincode = "1.2.1"
ipconfig = "0.2.1"
chrono = "0.4.11"
clipboard = "0.5.0"
flate2 = "1.0.13"
rodio = "0.10.0"
enum_dispatch = "0.2.1"
sdl2 = { version = "0.33.0", features = [ "bundled", "static-link" ] }
keyframe = "1.0.2"
