[package]
authors = ["Angel of Sol <julietckilian@gmail.com>"]
edition = "2018"
name = "fg_engine"
version = "0.1.0"

[workspace]
members = [
  "fg_input",
  "fg_controller",
  "fg_controller/sdl_controller_backend",
  "fg_datastructures",
  "fg_netcode",
  "fg_ui",
]

[profile.release]
#codegen-units = 1
#lto = "fat"
#opt-level = 3
#panic = "abort"

[dependencies]
bincode = "1.3.1"
chrono = "0.4.11"
clipboard = "0.5.0"
enum_dispatch = "0.3.2"
fg_controller = {path = "./fg_controller"}
fg_datastructures = {path = "./fg_datastructures"}
fg_input = {path = "./fg_input"}
fg_ui = {path = "./fg_ui"}
flate2 = "1.0.14"
gfx = "0.18.2"
gfx_core = "0.9.2"
gfx_device_gl = "0.16.2"
ggez = {path = "../ggez"}
glob = "0.3.0"
hecs = {git = "https://github.com/AngelOfSol/hecs.git", branch = "temp-clone", features = ["clone"]}
image = "0.23.6"
imgui = "0.6.1"
imgui-gfx-renderer = "0.6.1"
imgui-sys = "0.6.0"
inspect_design = {path = "../inspect_design"}
inventory = "0.1.10"
ipconfig = "0.2.2"
laminar = "0.3.2"
lazy_static = "1.4.0"
maplit = "1.0.2"
nalgebra = {version = "0.24", features = ["serde-serialize", "mint"]}
nfd = "0.0.4"
nom = "6.0.1"
paste = "1.0.4"
rodio = "0.11.0"
sdl2 = {version = "0.34.1", features = ["bundled", "static-link"]}
sdl_controller_backend = {path = "./fg_controller/sdl_controller_backend"}
serde = {version = "1.0.114", features = ["derive"]}
serde_json = "1.0.55"
strum = {version = "0.20", features = ["derive"]}
