[package]
authors = ["AngelOfSol <julietckilian@gmail.com>"]
edition = "2018"
name = "fg_controller"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fg_input = {path = "../fg_input"}
sdl2 = {version = "0.34.1", features = ["bundled", "static-link"]}
