[package]
authors = ["AngelOfSol <julietckilian@gmail.com>"]
edition = "2018"
name = "fg_input"
version = "0.1.0"

[dependencies]
imgui = "0.6.1"
inspect_design = {path = "../../inspect_design"}
maplit = "1.0.2"
nom = "6.1.0"
sdl2 = "0.34.3"
serde = {version = "1.0.123", features = ["derive"]}
strum = {version = "0.20", features = ["derive"]}
nalgebra = "0.24.0"
serde_json = "1.0.61"
lazy_static = "1.4.0"
