[package]
authors = ["AngelOfSol <julietckilian@gmail.com>"]
edition = "2018"
name = "fg_input"
version = "0.1.0"

[dependencies]
imgui = "0.6.1"
inspect_design = {path = "../../inspect_design"}
lazy_static = "1.4.0"
maplit = "1.0.2"
nalgebra = "0.24.0"
nom = "6.1.0"
serde = {version = "1.0.123", features = ["derive"]}
serde_json = "1.0.61"
strum = {version = "0.20", features = ["derive"]}
