[package]
authors = ["AngelOfSol <julietckilian@gmail.com>"]
edition = "2018"
name = "fg_netcode"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
fg_datastructures = {path = "../fg_datastructures"}
futures = "0.3.12"
tokio = {version = "1.2", features = ["sync"]}
