[package]
authors = ["AngelOfSol <julietckilian@gmail.com>"]
edition = "2018"
name = "fg_netcode"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
crossbeam-channel = "0.5.0"
fg_datastructures = {path = "../fg_datastructures"}
serde = {version = "1.0.123", features = ["derive"]}
tokio = {version = "1.2", features = ["sync"]}
async-channel = "1.6.1"
