[package]
authors = ["AngelOfSol <julietckilian@gmail.com>"]
edition = "2018"
name = "fg_ui"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fg_controller = {path = "../fg_controller"}
serde = {version = "1.0.123", features = ["derive"]}
