[package]
authors = ["AngelOfSol <julietckilian@gmail.com>"]
edition = "2018"
name = "std_udp_backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
fg_netcode = {path = "../"}
futures = "0.3.12"
serde = {version = "1.0.123", features = ["derive"]}
smol = "1.2.5"
turbulence = "0.3.0"
