[package]
authors = ["AngelOfSol <julietckilian@gmail.com>"]
edition = "2018"
name = "std_udp_backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
async-channel = "1.6.1"
bincode = "1.3.1"
bytes = "1.0.1"
crossbeam-channel = "0.5.0"
fg_netcode = {path = "../"}
futures-util = "0.3.12"
quinn = {git = "https://github.com/quinn-rs/quinn.git", branch = "main"}
rustls = {version = "0.19.0", features = ["dangerous_configuration"]}
serde = {version = "1.0.123", features = ["derive"]}
tokio = {version = "1.2.0", features = ["sync", "rt", "macros"]}
webpki = "0.21.4"
rcgen = "0.8.9"
thiserror = "1.0.24"
